# Desafio-Atleta

./: Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pg_hba.conf  pyproject.toml  routers.py
alembic/: env.py
alembic/versions/: 0745975c87f3_updata.py  1ef5fc894328_init.py  ec19ee0c9fbf_updata2.py
atleta/: controller.py  models.py  schemas.py
categorias/: controller.py  models.py  schemas.py
centro_treinamento/: controller.py  models.py  schemas.py
configs/: database.py  dependencies.py  settings.py
contrib/: models.py  schemas.py
init-db/: 00-config.sh
